<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/weight"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/reps"
        android:inputType="number" />

    <ImageButton
        android:id="@+id/button_delete_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_delete"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/delete_set" />
</LinearLayout>
