<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textViewAboutTopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/arialroundedmtboldregular"
        android:text="@string/about"
        android:textColor="#004F8B"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAboutExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/arialroundedmtboldregular"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="16sp"
        android:text="@string/AboutExplanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAboutTopText" />

    <TextView
        android:id="@+id/textViewContactCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/arialroundedmtboldregular"
        android:text="@string/ContactCreator"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAboutExplanation" />
    <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/arialroundedmtboldregular"
        android:text="@string/note_the_values_of_an_exercise_will_not_get_saved_to_statistics_when_you_add_it_values_are_added_to_statistics_every_time_you_click_on_an_exercise_and_hit_save_if_you_save_an_exercise_on_multiple_occasions_in_one_day_the_most_recent_values_will_get_added_to_statistics_for_this_day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactCreator"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <TextView
        android:id="@+id/textViewAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/arialroundedmtboldregular"
        android:text="@string/AboutVersion"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNote"
/>
</androidx.constraintlayout.widget.ConstraintLayout>
