<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".StatisticsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_collapseMode="parallax"
                android:background="@color/white">


                <TextView
                    android:id="@+id/textViews1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arialroundedmtboldregular"
                    android:text="@string/workout_plan"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp"
                    android:layout_marginBottom="8dp"/>

                <Spinner
                    android:id="@+id/spinnerNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:popupBackground="@color/darkblue"
                    android:backgroundTint="@color/darkblue"
                    />

                <TextView
                    android:id="@+id/textViews2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arialroundedmtboldregular"
                    android:text="@string/timeframe"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>

                <Spinner
                    android:id="@+id/spinnerTimeframe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:popupBackground="@color/darkblue"
                    android:backgroundTint="@color/darkblue"/>

                <TextView
                    android:id="@+id/textViews3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arialroundedmtboldregular"
                    android:text="@string/type"
                    android:textColor="@color/darkblue"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="0dp"
                    android:popupBackground="@color/darkblue"
                    android:backgroundTint="@color/darkblue"/>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialroundedmtboldregular"
            android:text="@string/home"
            android:textColor="@color/black"
            app:backgroundTint="@color/lightgrey"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonStatistics"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/buttonStatistics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialroundedmtboldregular"
            android:text="@string/statistics"
            android:textColor="@color/white"
            app:backgroundTint="@color/darkblue"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buttonHome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


